# friskis

./: .gitignore  .login.example.json  .schedule.example.json  LICENSE  devenv.nix  friskis.py  pyproject.toml  requirements.txt
